src/test/deca/context/invalid/classextends7.deca

class B {
    int a;
    int getA(){
        return a;
    }
}
class A extends B{
    float a;
    float getA(){
        return a;
    }
}

{

}